inlang: update translations

--- a/languages/de.json
+++ b/languages/de.json
@@ -1,1 +1,8 @@
-{}
+{
+  "home.about_list_0": "hms",
+  "home.about_list_1": "hart",
+  "home.about_list_2": "manchmal zu hart",
+  "header.switchlang": "DE",
+  "home.subtitle": "Hier finden Sie eine Vielzahl von Tings",
+  "home.title": "Willkommen auf der Seite"
+}
