inlang: update translations

--- a/languages/de.json
+++ b/languages/de.json
@@ -9,5 +9,6 @@
   "header.menu.about": "über uns",
   "about.subtitle": "Wir tun, was wir können",
   "about.main_text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nibh sem, tristique pulvinar elit ultricies, dignissim euismod velit. Ut sed scelerisque nulla. Nullam lobortis libero quis neque blandit ultrices. Phasellus sed purus convallis, Bibendum tellus eu, Elementum metus. Die Würde der Menschen ist groß, und die Menschen müssen sich zusammenschließen. Maecenas tristique libero vel placerat pretium. Kein Autor, keine Ahnung, aber keine Ahnung, wer der Autor ist. Phasellus consectetur efficitur lacus vel varius. Nunc accumsan, turpis eget dictum pharetra, Tortor justo congue eros, in malesuada ex elit sed nulla. Pellentesque non pulvinar nisl, Sed lacinia felis. Proin ut vehicula odio. Sed commodo quam lectus, in porttitor mi tempor nec. Es ist nicht erforderlich, dass dies der Fall ist. Curabitur-Auctor-Effizienz-Enim-vel-Euismod. Vivamus congue sagittis dolor, ein tempor felis condimentum sed. Nulla faucibus nisi a diam finibus, ut iaculis urna lobortis.",
-  "header.menu.home": "heim"
+  "header.menu.home": "heim",
+  "header.edit_this_page": "bearbeite diese seite"
 }
